k8s/apps/networking/traefik/metrics-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: networking
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: traefik-metrics
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
      protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
